CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(BeamGeometry)

set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

OPTION(IFEM_USE_FFALIB "Compile with FFaLib?" OFF)
IF(IFEM_USE_FFALIB)
  MESSAGE(STATUS "Compiling with use of FFaLib")
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  ADD_SUBDIRECTORY(FFaLib)
  STRING(APPEND CMAKE_CXX_FLAGS " -DHAS_FFALIB")
ENDIF(IFEM_USE_FFALIB)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
FILE(GLOB BeamGeo_SOURCES *.C)
FILE(GLOB beamGeo_HEADERS *.h)
ADD_LIBRARY(BeamGeometry ${BeamGeo_SOURCES})
IF(TARGET FFaLib)
  TARGET_LINK_LIBRARIES(BeamGeometry FFaLib)
ENDIF(TARGET FFaLib)
